2006-03-03  Aaron Bockover  <aaron@abock.org>

	* src/Banshee.Base/ImportManager.cs: FIFO patch to not try and import
	named pipes (Debian Bugzilla #354914) (Sebastian Dröge)

	* src/Banshee.Base/Sources/AudioCdSource.cs (Import): Call OnUpdated()
	to ensure UI redraws properly

	* src/AboutBox.cs: Added Sebastian

	* src/Banshee.Dap/Ipod/ipod-sharp.dll.config.in:
	* src/Banshee.Dap/Njb/njb-sharp.dll.config.in: 
	* src/MusicBrainz/MusicBrainz.dll.config.in: Map to slightly less
	precise SOs (Sebastian Dröge)

2006-03-03  Aaron Bockover  <aaron@abock.org>

	* data/UIManagerLayout.xml: Removed the ImportCDAction; replaced with
	ImportSourceAction; added ImportSourceAction to the source context menu

	* data/banshee.glade: Minor UI naming changes in the Import Dialog

	* src/PlayerInterface.cs: Contextually show new ImportSourceAction when
	a IImportSource is active; implemented OnImportSourceAction to call
	IImportSource.Import on an active IImportSource

	* src/Banshee.Base/ActionManager.cs: Implemented an action for
	ImportSourceAction

	* src/Banshee.Base/Gui/ImportDialog.cs: Use dynamic typechecking for
	IImportSource instead of handling a possible exception; only show
	the 'your library is empty' label if the library is actually empty

	* src/Banshee.Base/Sources/AudioCdSource.cs: Activate the import CD
	action on Import() to actually import the CD when the import is
	requested by the user

2006-03-03  Aaron Bockover  <aaron@abock.org>

	* banshee.mdp: Updated MonoDevelop project

	* data/UIManagerLayout.xml: Commented out import folder/files and
	added a import music menu item that launches the import dialog

	* data/banshee.glade: Added a new import dialog that allows selecting
	from a list of import sources

	* data/banshee.schemas.in: Added a ShowInitialImportDialog key

	* src/AboutBox.cs: Added Gabriel Burt

	* src/PlayerInterface.cs: Moved all the import methods into
	new classes that implement IImportSource; show the generic import